--- a/.github/workflows/ci-pgsql.yml
+++ b/.github/workflows/ci-pgsql.yml
@@ -24,6 +24,7 @@ jobs:
       matrix:
         os-version:
           - ubuntu-20.04
+          - ubuntu-22.04
 
         php-version:
           - "8.0"
