--- a/.github/workflows/ci-mssql.yml
+++ b/.github/workflows/ci-mssql.yml
@@ -56,13 +56,14 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
           tools: pecl
-          extensions: apc, curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite, pdo_sqlsrv
+          extensions: curl, dom, imagick, intl, mbstring, mcrypt, memcached, mysql, pdo, pdo_mysql, pdo_pgsql, pdo_sqlite, pgsql, sqlite, pdo_sqlsrv
           ini-values: date.timezone='UTC'
 
       - name: Install dependencies
         run: |
           rm -rf vendor/
           rm -f composer.lock
+          composer self-update -vvv
           composer install $COMPOSER_INSTALL_FLAGS
 
       - name: PHPUnit
