--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,8 @@
         "ext-mbstring": "*",
         "ext-pdo": "*",
         "lib-pcre": "*",
-        "charescape/php-functions": "^1.3.0",
         "cebe/markdown": "^1.2",
+        "charescape/php-functions": "^1.3.0",
         "ezyang/htmlpurifier": "^4.16",
         "symfony/polyfill-php81": "^1.27",
         "ziiframework/composer": "^3.8.2"
@@ -41,6 +41,7 @@
         "nette/php-generator": "^4.0",
         "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5",
+        "rector/rector": "^0.14.8",
         "symfony/var-dumper": "^6.0"
     },
     "autoload": {
