--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     },
     "require-dev": {
         "cebe/indent": "^1.0",
+        "charescape/backslasher": "^2.1",
         "nette/php-generator": "^4.0",
         "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5",
@@ -61,7 +62,8 @@
         "optimize-autoloader": true,
         "sort-packages": true,
         "allow-plugins": {
-            "ziiframework/composer": true
+            "ziiframework/composer": true,
+            "charescape/backslasher": true
         }
     },
     "scripts": {
