--- a/.github/workflows/ci-mysql2.yml
+++ b/.github/workflows/ci-mysql2.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   tests:
     name: Ubuntu-20.04 PHP-8.0 MySQL-8.0
-    if: "!contains(github.event.head_commit.message, 'no skip ci')"
+    if: ${{ !contains(github.event.head_commit.message, 'no skip ci') }}
 
     runs-on: ubuntu-20.04
 
