--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   phpunit:
     name: PHP ${{ matrix.php-version }} mysql ${{ matrix.mysql-version }} on ${{ matrix.os-version }}
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    if: ${{ !contains(github.event.head_commit.message, 'skip ci') }}
 
     runs-on: ${{ matrix.os-version }}
 
