--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   phpstan:
     name: PHP ${{ matrix.php-version }} on ubuntu-20.04
-    if: "contains(github.event.head_commit.message, 'phpstan ci')"
+    if: ${{ contains(github.event.head_commit.message, 'phpstan ci') }}
 
     strategy:
       fail-fast: false
