--- a/.github/workflows/ci-mssql.yml
+++ b/.github/workflows/ci-mssql.yml
@@ -16,6 +16,7 @@ env:
 jobs:
   tests:
     name: PHP ${{ matrix.php-version }} mssql ${{ matrix.mssql-version }} on ${{ matrix.os-version }}
+    if: ${{ !contains(github.event.head_commit.message, 'skip ci') }}
 
     runs-on: ${{ matrix.os-version }}
 
@@ -23,7 +24,6 @@ jobs:
       matrix:
         os-version:
           - ubuntu-20.04
-          - ubuntu-22.04
 
         php-version:
           - "8.0"
