--- a/.github/workflows/ci-pgsql.yml
+++ b/.github/workflows/ci-pgsql.yml
@@ -16,7 +16,7 @@ env:
 jobs:
   tests:
     name: PHP ${{ matrix.php-version }} pgsql ${{ matrix.pgsql-version }} on ${{ matrix.os-version }}
-    if: "!contains(github.event.head_commit.message, 'skip ci')"
+    if: ${{ !contains(github.event.head_commit.message, 'skip ci') }}
 
     runs-on: ${{ matrix.os-version }}
 
@@ -24,7 +24,6 @@ jobs:
       matrix:
         os-version:
           - ubuntu-20.04
-          - ubuntu-22.04
 
         php-version:
           - "8.0"
